Fixed the services card title scaling on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -650,7 +650,7 @@ svg.services-background-top {
   }
 
   .card h3 {
-    font-size: 1.2rem;
+    font-size: 1.15rem;
   }
 }
 
@@ -668,7 +668,7 @@ svg.services-background-top {
   .card-container {
     flex-direction: column;
     justify-content: center;
-    width: 85vw;
+    width: 90vw;
     height: 100%;
   }
 
@@ -679,7 +679,7 @@ svg.services-background-top {
   }
 
   .card h3 {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   }
 }
 
